[gd_scene load_steps=60 format=3 uid="uid://dsbyogmmvhqom"]

[ext_resource type="Script" path="res://characters/player.gd" id="1_vitic"]
[ext_resource type="Texture2D" uid="uid://c2xxeve28htbh" path="res://art/Main Characters/Ninja Frog/Fall (32x32).png" id="2_dxwmg"]
[ext_resource type="Texture2D" uid="uid://egs3e603lkd3" path="res://art/Main Characters/Ninja Frog/Hit (32x32).png" id="3_p30p8"]
[ext_resource type="Texture2D" uid="uid://uoxc1c0w7mtv" path="res://art/Main Characters/Ninja Frog/Idle (32x32).png" id="4_hj02a"]
[ext_resource type="Texture2D" uid="uid://bx7w440ok6dof" path="res://art/Main Characters/Ninja Frog/Jump (32x32).png" id="5_7t54q"]
[ext_resource type="Texture2D" uid="uid://c3jl8vd1ok03o" path="res://art/Main Characters/Ninja Frog/Run (32x32).png" id="6_a5lgw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mvfrc"]
atlas = ExtResource("3_p30p8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7kxb"]
atlas = ExtResource("3_p30p8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tkwg"]
atlas = ExtResource("3_p30p8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8fup"]
atlas = ExtResource("3_p30p8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs4sl"]
atlas = ExtResource("3_p30p8")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyl00"]
atlas = ExtResource("3_p30p8")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv6om"]
atlas = ExtResource("3_p30p8")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t8ht"]
atlas = ExtResource("3_p30p8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jq48"]
atlas = ExtResource("3_p30p8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm6ac"]
atlas = ExtResource("3_p30p8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yxn2"]
atlas = ExtResource("3_p30p8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27lvq"]
atlas = ExtResource("3_p30p8")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u5tg"]
atlas = ExtResource("3_p30p8")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c28b"]
atlas = ExtResource("3_p30p8")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5abs"]
atlas = ExtResource("2_dxwmg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqhxl"]
atlas = ExtResource("4_hj02a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooap7"]
atlas = ExtResource("4_hj02a")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j80ut"]
atlas = ExtResource("4_hj02a")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wxkk"]
atlas = ExtResource("4_hj02a")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_coswv"]
atlas = ExtResource("4_hj02a")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq7kk"]
atlas = ExtResource("4_hj02a")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwx4h"]
atlas = ExtResource("4_hj02a")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yvkt"]
atlas = ExtResource("4_hj02a")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kwjb"]
atlas = ExtResource("4_hj02a")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hxym"]
atlas = ExtResource("4_hj02a")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r2un"]
atlas = ExtResource("4_hj02a")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6q3a0"]
atlas = ExtResource("5_7t54q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0p2t"]
atlas = ExtResource("6_a5lgw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jps7b"]
atlas = ExtResource("6_a5lgw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8447l"]
atlas = ExtResource("6_a5lgw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_piqa5"]
atlas = ExtResource("6_a5lgw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dylma"]
atlas = ExtResource("6_a5lgw")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0qo4"]
atlas = ExtResource("6_a5lgw")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_245ae"]
atlas = ExtResource("6_a5lgw")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wu7i"]
atlas = ExtResource("6_a5lgw")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hijbn"]
atlas = ExtResource("6_a5lgw")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h3b0"]
atlas = ExtResource("6_a5lgw")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ivti"]
atlas = ExtResource("6_a5lgw")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24378"]
atlas = ExtResource("6_a5lgw")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l2uy"]
atlas = ExtResource("6_a5lgw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmq0v"]
atlas = ExtResource("6_a5lgw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_10eo2"]
atlas = ExtResource("6_a5lgw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjcih"]
atlas = ExtResource("6_a5lgw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_25nrx"]
atlas = ExtResource("6_a5lgw")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_legwa"]
atlas = ExtResource("6_a5lgw")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbsvc"]
atlas = ExtResource("6_a5lgw")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp1q2"]
atlas = ExtResource("6_a5lgw")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa4vg"]
atlas = ExtResource("6_a5lgw")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oem5t"]
atlas = ExtResource("6_a5lgw")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70syh"]
atlas = ExtResource("6_a5lgw")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkgbw"]
atlas = ExtResource("6_a5lgw")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_iggs0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvfrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7kxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tkwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8fup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs4sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyl00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv6om")
}],
"loop": true,
"name": &"climb_left",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t8ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jq48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm6ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yxn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27lvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u5tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c28b")
}],
"loop": true,
"name": &"climb_right",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5abs")
}],
"loop": true,
"name": &"fall_left",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dxwmg")
}],
"loop": true,
"name": &"fall_right",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqhxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooap7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j80ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wxkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coswv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq7kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwx4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yvkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kwjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hxym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r2un")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q3a0")
}],
"loop": true,
"name": &"jump_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_7t54q")
}],
"loop": true,
"name": &"jump_right",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0p2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jps7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8447l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_piqa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dylma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0qo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_245ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wu7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hijbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h3b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ivti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24378")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l2uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmq0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10eo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjcih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25nrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_legwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbsvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp1q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa4vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oem5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70syh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkgbw")
}],
"loop": true,
"name": &"run_right",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_guvas"]
radius = 32.0
height = 92.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_vitic")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(3.0625, 3.0625)
sprite_frames = SubResource("SpriteFrames_iggs0")
animation = &"run_right"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_guvas")
metadata/_edit_lock_ = true

[node name="RightWall" type="RayCast2D" parent="."]
position = Vector2(0, 22)
target_position = Vector2(35, 0)

[node name="TopRightWall" type="RayCast2D" parent="."]
position = Vector2(0, -14)
target_position = Vector2(35, 0)

[node name="LeftWall" type="RayCast2D" parent="."]
position = Vector2(0, 22)
target_position = Vector2(-35, 0)

[node name="TopLeftWall" type="RayCast2D" parent="."]
position = Vector2(0, -14)
target_position = Vector2(-35, 0)

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
